<resources>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="app_name">UniStudiac</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="regname">Register</string>
    <string name="uname">Registration Number</string>
    <string name="pwd">Password</string>
    <string name="pwd2">Re-enter Password</string>
    <string name="str">Strength:-</string>
    <string name="regbutton">Next</string>
    <string name="img">img</string>
    <string name="endreg">Register</string>
    <string name="stname">Student Name</string>
    <string name="email">SLIIT Email</string>
    <string name="phone">Phone Number</string>
    <string name="stdetails">Student Details</string>
    <string name="date">Date of Admission</string>
    <string name="modules">Modules</string>
    <string name="sub">Submissions</string>
    <string name="atte">Attendance</string>
    <string name="fees">Fees</string>
    <string name="lib">Library</string>
    <string name="info">Information</string>
    <string name="loout">Logout</string>
    <string name="wel">Welcome!</string>
    <string name="regnum">Registration Number</string>
    <string name="buttonimg">img</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="back"> Back</string>
    <string name="editdetails">Edit Student Details</string>
    <string name="oldpwd">Old Password</string>
    <string name="newpwd">New Password</string>
    <string name="done">Done</string>
    <string name="logintext">Login</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="resetpwd">Reset Password</string>
    <string name="send">Send Instructions</string>
    <string name="submissions">Submissions</string>
    <string name="today">Today</string>
    <string name="scheduled">Scheduled</string>
    <string name="all">All</string>
    <string name="module1">Module 1</string>
    <string name="module2">Module 2</string>
    <string name="delete">Delete</string>
    <string name="addm">Add Module</string>
    <string name="mym">My Modules</string>
    <string name="search">Search</string>
    <string name="newm">Add New Module</string>
    <string name="cancel">Cancel</string>
    <string name="mname">Module Name</string>
    <string name="color">Color</string>
    <string name="sub1">Submission 1</string>
    <string name="sub2">Submission 2</string>
    <string name="sub3">Submission 3</string>
    <string name="oldsub">Older Submissions</string>
    <string name="addsub">Add New Submission</string>
    <string name="subdetails">Submission Details</string>
    <string name="rday">Remind Me On A Day</string>
    <string name="rtime">Remind Me On A Time</string>
    <string name="pro">Priority</string>
    <string name="subname">Submission Name</string>
    <string name="note">Note</string>
    <string name="editsub">Edit Submission Details</string>
    <string name="tomo">Tomorrow</string>
    <string name="date1">Date</string>
    <string name="sub4">Submission 4</string>
    <string name="module3">Module 3</string>
    <string name="eduinfo">Education Info</string>
    <string name="campusinfo">Campus Info</string>
    <string name="sands">Societies and Sports</string>
    <string name="fee">Course Fees and Exam Fees</string>
    <string name="cando">Courses and Overses Education</string>
    <string name="sports">Sports</string>
    <string name="socities">Societies and Clubs</string>
    <string name="cfees">Course Fees</string>
    <string name="efees">Exam Fees</string>
    <string name="regfee">Registration Fee:-</string>
    <string name="rfee">Repeat Exam Fee:-</string>
    <string name="pfees">Pro-rata Fee:-</string>
    <string name="courses">Courses</string>
    <string name="c1">BSc (Hons) in Information Technology
Specialising in Computer Systems &amp; Network Engineering</string>
    <string name="c2">BSc (Hons) in Information Technology
Specialising in Information Systems Engineering</string>
    <string name="c3">BSc (Hons) in Information Technology
Specialising in Cyber Security</string>
    <string name="c4">BSc (Hons) in Information Technology
Specialising in Software Engineering</string>
    <string name="c5">BSc (Hons) in Information Technology
Specialising in Data Science</string>
    <string name="c6">BSc (Hons) in Information Technology
Specialising in Interactive Media</string>
    <string name="c7">BSc (Hons) in Information Technology
Specialising in Information Technology</string>
    <string name="odu">Foreign Courses</string>
    <string name="f1">
Bachelor of Science
(Computer Systems &amp; Networking)</string>
    <string name="f2">Bachelor of Computing
(Software Engineering)</string>
    <string name="f3">Bachelor of Information Technology</string>
    <string-array name="priority">
        <item>Select</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="select">Select</string>
    <string name="reset">Reset Password</string>
    <string name="cpwd">Confirm Password</string>
    <string name="uppwd">Update Password</string>
    <string name="sp1">Batminton</string>
    <string name="sp2">Basketball</string>
    <string name="sp3">Carrom</string>
    <string name="sp4">Chess</string>
    <string name="sp5">Cricket</string>
    <string name="sp6">Football</string>
    <string name="sp7">Fustal</string>
    <string name="sp8">Hockey</string>
    <string name="sp9">Karate</string>
    <string name="sp10">Netball</string>
    <string name="sp11">Rugby</string>
    <string name="sp12">Swimming</string>
    <string name="sp13">Table Tennis</string>
    <string name="sp14">Tennis</string>
    <string name="sp15"><![CDATA[Track &  Feild]]></string>
    <string name="sp16">Water Polo</string>
    <string name="sp17">Vollyball</string>
    <string name="cdetails">" Contact Details
                                Name: Ms.Hithaishi Jayawardana (Sports Coordinator)
                                Tel no: 011 754 3139
                                Email: hithaishi.j@sliit.lk"</string>
    <string name="sis">Students Interactive Socity</string>
    <string name="fs">Facalty Socities</string>
    <string name="sc">Sports Council</string>
    <string name="os">Other Socities</string>
    <string name="cd">Contact Details</string>
    <string name="cdname">Name: Ms.Hithaishi Jayawardana (Sports Coordinator)</string>
    <string name="cdtel">Tel no: 011 754 3139</string>
    <string name="cdemail">Email: hithaishi.j@sliit.lk</string>
    <string name="SIS">Students Interactive Society</string>
    <string name="sisdetails">The main student body within SLIIT, comprising student representatives of the Departmental societies in Information Technology, Engineering, and Business Management.</string>
    <string name="sisdetails2">The patrons of the society are the Chancellor and Vise Chancellor of SLIIT. SIS together with the respective student communities, organize various events, maintains decorum and adheres to rules, upholding the good name of the institute.</string>
    <string name="sisgroup">Student Interactive Society – Office Bearers</string>
    <string name="president">1.President:</string>
    <string name="vpresident">2.Vice President:</string>
    <string name="secretary">3.Secretary</string>
    <string name="vsecretary">4.Assistant Secretary:</string>
    <string name="treasurer">5.Treasurer:</string>
    <string name="editor">6.Editor:</string>
    <string name="fcsc">Faculty of computing student community (FCSC)</string>
    <string name="fcscdetails">Aims at enhancing the knowledge of IT students and accustom them to the ever-changing IT industry. This is done through activities such as workshops and guest lectures by leading IT Professionals in the industry, enabling better student interaction and knowledge-sharing.</string>
    <string name="fcscgroup">Faculty of computing student community (FCSC) – Office Bearers</string>
    <string name="FESC">Faculty of engineering student community (FESC)</string>
    <string name="fescdetails">Considered the main student community of the Faculty of Engineering, functioning under the guidance of the Student Interactive Society (SIS). FESC mainly focuses on the academic problems and the difficulties of engineering students, and works together with senior staff of the faculty and the community for solutions.</string>
    <string name="fescgroup">Faculty of engineering student community (FESC) – Office Bearers</string>
    <string name="FBSC">Faculty Of Business Student Community (FBSC)</string>
    <string name="fbscdetails">Formed under the main student body, The student Interactive Society (SIS), comprises the undergraduates of the Business Management stream. The committee acts as the student representative, facilitating necessary programmes along with managing the Faculty of Business.</string>
    <string name="fbscgroup">Faculty Of Business Student Community (FBSC) – Office Bearers</string>
    <string name="sportclub">" Sport Council"</string>
    <string name="scouncildetails">Promotes sports and recreational activities. At SLIIT, students engage in a wide range of sports including cricket, rugby, volleyball, tennis, table tennis, badminton, chess, carom and karate. The Malabe campus has excellent indoor and outdoor sports facilities. These include a large playground, a tennis court, a basketball court, indoor table tennis, carom and a well- equipped gymnasium.</string>
    <string name="club1">ISACA in SLIIT</string>
    <string name="c1details">ISACA SLIIT student chapter is to promote the career in assurance and consult audit in cyber security sides. To provide the career work we do some workshops and meetups to help the students to get success. ISACA SLIIT Student Chapter is the third ISACA Student Chapter under the ISACA Sri Lanaka Chapter, which work with the aim of encouraging education beyond the university students’ capability to learn and to connect the supportive professionals in the industry.</string>
    <string name="club2">Rotaract Club</string>
    <string name="c2details">A service club established for SLIIT students under ‘Rotary International’. The sponsorship by local Rotary Club/s is mentored by the parent club in Battaramulla. Membership is open to all SLIIT students and aims to develop professional and leadership skills, emphasizing on respect for rights of others, promoting ethical standards and the dignity of all useful occupations. It also creates opportunities for members to initiate community development projects, promoting peace and understanding within the community. Interacting within sponsoring Rotary Clubs and actively participating in the activities undertaken by them. Rotaractors conduct projects under four categories. Professional development, community service, club service and international understanding.</string>
    <string name="club3">The Gavel Club</string>
    <string name="c3details">A community that provides the student body with opportunities to develop communications skills as well as means for self-improvement. Since its formation in 2012, The Gavel Club has thrived in the guidance and support of the SLIIT Toastmasters Club, as well as other academic staff. As a communications and leadership programme modeled after Toastmasters International, The Gavel club is a way of providing the Toastmasters experience to groups who may be eligible for regular membership.</string>
</resources>